<resources>
    <string name="app_name">HearthstoneList</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hearthstone</string>
    <string name="nav_header_subtitle">Card List Application</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="wait_joke">Here is a joke while you wait: </string>

    <string name="menu_all_cards">All Cards</string>
    <string name="menu_demon_hunter">Demon Hunter</string>
    <string name="menu_druid">Druid</string>
    <string name="menu_hunter">Hunter</string>
    <string name="menu_mage">Mage</string>
    <string name="menu_paladin">Paladin</string>
    <string name="menu_priest">Priest</string>
    <string name="menu_rogue">Rogue</string>
    <string name="menu_shaman">Shaman</string>
    <string name="menu_warlock">Warlock</string>
    <string name="menu_warrior">Warrior</string>
    <string name="menu_complete_card">Complete Card</string>


    <string name="ERROR_UNEXPECTED">Um erro inesperado ocorreu. Tente novamente mais tarde.</string>
    <string name="ERROR_INTERNET_CONNECTION">Conexão à internet necessária para uso da applicação.</string>


    <string name="card_name">Nome do card</string>
    <string name="card_name_label">Nome do card</string>
    <string name="card_image">Imagem do card</string>
    <string name="card_set">Set: %s</string>
    <string name="card_flavor">Card Flavor</string>
    <string name="card_text">Card Description</string>
    <string name="card_type">Type: %s</string>
    <string name="card_faction">Faction: %s</string>
    <string name="card_rarity">Rarity: %s</string>
    <string name="card_rarity_label">Rarity: </string>
    <string name="card_cost">Cost: %d</string>
    <string name="card_cost_label">Cost: </string>
    <string name="card_attack">Attack: %d</string>
    <string name="card_health">Health: %d</string>

    <string name="all_cards">Todas as cartas</string>

</resources>