<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all_cards"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_all_cards" />
        <item
            android:id="@+id/nav_demon_hunter"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_demon_hunter" />
        <item
            android:id="@+id/nav_druid"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_druid" />
        <item
            android:id="@+id/nav_hunter"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_hunter" />
        <item
            android:id="@+id/nav_mage"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_mage" />
        <item
            android:id="@+id/nav_paladin"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_paladin" />
        <item
            android:id="@+id/nav_priest"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_priest" />
        <item
            android:id="@+id/nav_rogue"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_rogue" />
        <item
            android:id="@+id/nav_shaman"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_shaman" />
        <item
            android:id="@+id/nav_warlock"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_warlock" />
        <item
            android:id="@+id/nav_warrior"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_warrior" />

    </group>
</menu>