<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_margin="8dp">


    <TextView
        android:id="@+id/text_card_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/card_name"
        android:textStyle="bold"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/text_card_rarity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/card_rarity"
        android:textStyle="bold"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/text_card_cost"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginStart="16dp"
        android:text="@string/card_cost"
        android:textStyle="bold" />





</LinearLayout>